# Ctrl

./: .replit  bot.py  config.json  pyproject.toml  replit.nix
cogs/: beta.py  general.py  greeting.py  moderation.py  music.py  owner.py
database/: schema.sql
gpt/: GPT.py
helpers/: db_manager.py
